--- a/src/main/js/src/App.css
+++ b/src/main/js/src/App.css
@@ -23,7 +23,19 @@
   margin-top: 15px;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 100%;
+}
+
+.cancel-button {
+  width: 10vh;
+  height: 30px;
+  background-color: red;
+  color: white;
+  border: 0;
+  margin-top: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 100%;
 }
 
 .red-button {
